--- a/apps/web/src/pages/Video/Video.module.css
+++ b/apps/web/src/pages/Video/Video.module.css
@@ -2,8 +2,18 @@
   grid-column: span 4 / span 4;
 }
 
+.video-player {
+  height: 100%;
+  width: auto;
+  margin-bottom: var(--space-4);
+  border: 0;
+  aspect-ratio: 16 / 9;
+}
+
 .comment-wrapper {
   grid-column: span 2 / span 2;
+  border-radius: var(--radius-4);
+  background: var(--mauve-3);
 }
 
 .products-list {
